--- a/html-css/desafios/d010/src/style.css
+++ b/html-css/desafios/d010/src/style.css
@@ -3,21 +3,81 @@
     font-family: "idroid";
     src: url("../fonts/idroid.otf");
 }
+@font-face {
+    font-family: "coolvetica";
+    src: url("../fonts/coolvetica_condensed_rg.otf");
+}
 
 body {
-    background-color: rgba(107, 180, 119, 0.692);
+    background-color: #83E0AC;
+}
+header{
+    background: rgb(60,220,132);
+    background: radial-gradient(circle, rgba(60,220,132,1) 58%, #006e02 100%);
+    height: 165px;
+    width: 100%;
+    padding-top: 15px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.438);
+
+}
+header > h1 {
+    font-family: "coolvetica", sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    font-size: 2.7em;
+    font-weight: 100;
+    margin-bottom: 10px;
+}
+header > p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-align: center;
+    width: 400px;
+    margin: 0px auto;
+    font-size: 16px;
+}
+
+menu > a {
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: white;
+    font-size: small;
+    margin-right: 10px;
 }
 main {
     background-color: white;
-    width: 80%;
-    margin: auto;
-    padding: 10px;
+    width: 65%;
+    margin: 0px auto;
+    padding: 20px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.438);
 }
 main > h1 {
     font-family: "idroid", sans-serif;
+    color: #115530;
+}
+main > h2 {
+    background-image: linear-gradient(to right, #C3E9D4, #FFFFFF);
+    color: #125332;
+    font-family: "idroid", sans-serif;
 }
 main > p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
     text-align: justify;
     text-indent: 20px;
     line-height: 26px;
+}
+
+footer {
+    background-color: #1A5C38;
+    height: 20px;
+    width: 100%;
+}
+footer > p {
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+    font-size: 10px;
+    padding: px 0px;
+    text-align: center;
 }
