--- a/html-css/desafios/d010/src/style.css
+++ b/html-css/desafios/d010/src/style.css
@@ -7,6 +7,11 @@
     font-family: "coolvetica";
     src: url("../fonts/coolvetica_condensed_rg.otf");
 }
+* {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
 
 body {
     background-color: #83E0AC;
@@ -14,59 +19,80 @@ body {
 header{
     background: rgb(60,220,132);
     background: radial-gradient(circle, rgba(60,220,132,1) 58%, #006e02 100%);
-    height: 165px;
+    height: 140px;
     width: 100%;
-    padding-top: 15px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.438);
+    padding: 15px 10px 10px 0px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.438);
+    color: white;
 
 }
 header > h1 {
     font-family: "coolvetica", sans-serif;
     text-transform: uppercase;
     text-align: center;
-    color: white;
     font-size: 2.7em;
     font-weight: 100;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 header > p {
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
     text-align: center;
     width: 400px;
-    margin: 0px auto;
+    margin: 0px auto 20px auto;
     font-size: 16px;
 }
-
+menu {
+    padding-left: 20px;
+}
 menu > a {
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     color: white;
     font-size: small;
     margin-right: 10px;
+    font-weight: bold;
 }
 main {
     background-color: white;
     width: 65%;
-    margin: 0px auto;
+    margin: auto;
     padding: 20px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.438);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.712);
 }
 main > h1 {
     font-family: "idroid", sans-serif;
     color: #115530;
+    margin-bottom: 20px;
 }
 main > h2 {
     background-image: linear-gradient(to right, #C3E9D4, #FFFFFF);
     color: #125332;
     font-family: "idroid", sans-serif;
+    margin: 20px 0px;
+    padding-left: 10px;
 }
 main > p {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
     text-align: justify;
-    text-indent: 20px;
-    line-height: 26px;
+    text-indent: 30px;
+    line-height: 1.6em;
+}
+picture img {
+    width: 100%;
+    display:block;
+    margin: 0px auto;
+}
+
+#bugdroid {
+    width: 300px;
+    display:block;
+    margin: 0px auto
+}
+#iframes {
+    background-color: #115530;
+    margin: 15px -20px;
+    padding: 20px;
 }
 
 footer {
