--- a/html-css/desafios/d010/src/style.css
+++ b/html-css/desafios/d010/src/style.css
@@ -34,20 +34,29 @@ header > h1 {
     font-weight: 100;
     margin-bottom: 20px;
 }
+
 header > p {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     width: 400px;
     margin: 0px auto 20px auto;
-    font-size: 16px;
+    font-size: 14px;
 }
 menu {
     padding-left: 20px;
 }
-menu > a {
+header a:link, a:visited, a:active {
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-    color: white;
+    color: #fff;
+    font-size: small;
+    margin-right: 10px;
+    font-weight: bold;
+}
+header a:visited {
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: #fff;
     font-size: small;
     margin-right: 10px;
     font-weight: bold;
@@ -55,9 +64,10 @@ menu > a {
 main {
     background-color: white;
     width: 65%;
-    margin: auto;
+    margin: 0px auto 10px auto;
     padding: 20px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.712);
+    border-radius: 0 0 5px 5px;
 }
 main > h1 {
     font-family: "idroid", sans-serif;
@@ -77,11 +87,24 @@ main > p {
     text-align: justify;
     text-indent: 30px;
     line-height: 1.6em;
+    font-size: 14px;
+}
+main strong {
+    color: #125332;
+}
+main i {
+    color: #555;
+    margin-left: -25px;
+}
+main a:link, a:visited, a:active {
+    color: #125332;
+    text-decoration: none;
+    font-weight: bold;
 }
 picture img {
     width: 100%;
     display:block;
-    margin: 0px auto;
+    margin: 10px auto;
 }
 
 #bugdroid {
@@ -94,16 +117,54 @@ picture img {
     margin: 15px -20px;
     padding: 20px;
 }
+article {
+    background-color: #C5EBD6;
+    border-radius: 10px;
+    width: 100%;
+    padding-bottom: 10px;
 
+}
+article > h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    background-color: #2FA866;
+    border-radius: 10px 10px 0px 0px;
+    color: white;
+    padding: 10px;
+}
+article > p {
+    font-family: Arial, Helvetica, sans-serif;
+    text-indent: 20px;
+    padding: 0px 10px;
+    text-align: justify;
+    font-size: 14px;
+    line-height: 1.6em;
+    margin: 10px 0px;
+}
+article td {
+    width: 600px;
+}
+
+article li {
+    list-style-type: disc;
+    font-size: small;
+    margin-left: 25px;
+}
 footer {
     background-color: #1A5C38;
-    height: 20px;
+    height: 22px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 footer > p {
-    font-family: 'Times New Roman', Times, serif;
-    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 50;
+    color: rgba(255, 255, 255, 0.76);
     font-size: 10px;
-    padding: px 0px;
     text-align: center;
+}
+footer strong {
+    color: #FFFFFF;
 }
