--- a/html-css/desafios/d012/style.css
+++ b/html-css/desafios/d012/style.css
@@ -43,4 +43,49 @@ a, a:active, a:hover {
 
 main p {
     font-family: 'Sriracha', cursive;
+    font-size: 4vw;
+}
+
+.estrofe {
+    padding:100px 50px;
+}
+
+.estrofe-img {
+    padding:100px 50px;
+    color: white;
+}
+
+.imagem01 {
+    background-image: url(img/background001.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center right;
+    width: 100vw;
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.623);
+}
+.imagem02 {
+    background-image: url(img/background002.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center right;
+    width: 100vw;
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.623);
+}
+.box-imagem {
+    width: 50%;
+    background-color: rgba(0, 0, 0, 0.541);
+    padding: 1%;
+}
+.divisao {
+    margin-bottom: 25px;
+}
+footer {
+    background-color: black;
+    padding: 20px 20px;
+}
+footer p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    text-align: center;
+    font-size: 1.2em;
 }
